--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
            <img class="img-fluid w-75" src="images/mac.png" alt="">
        </div>
        <div class="head-right co-lg-6 col-md-6">
-          <h1>Customize your 24 inch blue Macbook with Apple m1 chip.</h1>
+          <h1>Customize your 24 inch blue Mac-book with Apple m1 chip.</h1>
  <p>M1 includes Apple’s most advanced GPU. It benefits from years of analysis of Mac applications, including everyday apps and challenging pro workloads. With industry-leading performance and incredible efficiency, the GPU in M1 is in a class by itself. Featuring up to eight powerful cores capable of running nearly 25,000 threads simultaneously.</p>
 
         <!-- memory  buy section  -->
